# crewai_custom_tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  sbom.json
.github/workflows/: ci.yml  docs.yml  release.yml
.superpowers/sdd/: progress.md
docs/: USER_GUIDE.md
docs/adr/: 0001-core-architecture-and-design.md  0002-universal-monolith.md  0003-native-mcp-server.md  0004-native-pages-deployment.md  0005-osintfr-hybrid-auth.md
docs/superpowers/plans/: 2026-07-05-crewai-tools-reusable-library.md  2026-07-05-osintfr-tools-integration-plan.md  2026-07-22-releases-automatiques.md
docs/superpowers/specs/: 2026-07-05-crewai-tools-library-design.md  2026-07-05-osintfr-tools-integration-design.md  2026-07-22-releases-automatiques-design.md
scripts/: build_de_gazetteer.py  build_prenoms_sexe.py  generate_sbom.py
src/crew_custom_tools/: __init__.py  mcp_server.py
src/crew_custom_tools/core/: decorators.py
src/crew_custom_tools/enterprise/: __init__.py  accuweather.py  airtable.py  rag_tools.py  todoist.py
src/crew_custom_tools/models/: __init__.py  osintfr_models.py
src/crew_custom_tools/tools/finance/: __init__.py  company_info.py  crypto.py  exchange_rate.py  fear_greed.py  history_holdings.py  market_data.py  yfinance_news.py  yfinance_ticker.py
src/crew_custom_tools/tools/osint/: __init__.py  corporate_global.py  domain_recon.py  email_recon.py  github.py  person_recon.py  registers.py
src/crewai_custom_tools/: __init__.py  mcp_server.py
src/crewai_custom_tools/config/: cache.py
src/crewai_custom_tools/core/: __init__.py  cli_runner.py  decorators.py  keys.py  rate_limiter.py  results.py
src/crewai_custom_tools/enterprise/: __init__.py  accuweather.py  airtable.py  rag_tools.py  todoist.py
src/crewai_custom_tools/models/: __init__.py  analytics_models.py  data_metrics.py  email_models.py  finance_models.py  osintfr_models.py
src/crewai_custom_tools/reporting/: __init__.py  data_centric.py  html_builder.py  html_generator.py  pdf_generator.py  report_writers.py  template_renderers.py
src/crewai_custom_tools/tools/analytics/: __init__.py  a_plus_scoring.py  aplus_screening.py  etf_analysis.py  etf_metrics.py  position_sizing.py  price_targets.py  scoring_criteria.py  screening_ranking.py  valuation.py
src/crewai_custom_tools/tools/files/: __init__.py
src/crewai_custom_tools/tools/finance/: __init__.py  coinmarketcap_extras.py  company_info.py  crypto.py  enhanced.py  exchange_rate.py  fear_greed.py  history_holdings.py  indicators.py  market_data.py  market_extras.py  risk.py  screening.py  sec.py  sentiment.py  yfinance_news.py  yfinance_ticker.py
src/crewai_custom_tools/tools/genealogy/: matchid.py  militaires.py
src/crewai_custom_tools/tools/genealogy/analysis/: __init__.py  corrections.py  duplicates.py  identity.py  merge_plan.py  phonetics.py  place_duplicates.py
src/crewai_custom_tools/tools/genealogy/data/: README.md  de_communes.csv  prenoms_sexe.csv
src/crewai_custom_tools/tools/genealogy/geo/: allemagne.py  france.py  france_ex_communes.py  nominatim.py  registry.py  score.py  suisse.py  tools.py  transitions.py  usa.py
src/crewai_custom_tools/tools/genealogy/gramps/: client.py  facts.py  write_tools.py
src/crewai_custom_tools/tools/genealogy/models/: __init__.py  domain.py  gramps_generated.py
src/crewai_custom_tools/tools/genealogy/pistes/: __init__.py  dhs.py  matchid.py  wikidata.py
src/crewai_custom_tools/tools/genealogy/referentiel/: chargement.py  config.py  wikidata.py
src/crewai_custom_tools/tools/genealogy/standardize/: names.py  places.py
src/crewai_custom_tools/tools/osint/: __init__.py  cli_providers.py  corporate_global.py  domain_recon.py  email_delegator.py  email_recon.py  github.py  person_recon.py  registers.py
src/crewai_custom_tools/tools/web/: __init__.py  fact_checking.py  perplexity.py  perplexity_structured.py  places.py  rss.py  rss_aggregator.py  scraper.py  search_providers.py  serper.py  tech_stack.py  wikidata.py  wikipedia.py  wikipedia_processing.py
src/crewai_tools/tools/: __init__.py
src/crewai_tools/tools/web/: __init__.py  perplexity.py
tests/: conftest.py  test_analytics_etf.py  test_analytics_sizing_targets.py  test_analytics_valuation.py  test_build_prenoms_sexe.py  test_cache.py  test_decorators.py  test_enterprise_tools.py  test_export_surface.py  test_exports.py  test_file_tools.py  test_finance_analytics.py  test_finance_extras.py  test_finance_tools.py  test_genealogy_analysis_tools.py  test_genealogy_blocking.py  test_genealogy_corrections.py  test_genealogy_create_person_event_tools.py  test_genealogy_deces_scoring.py  test_genealogy_domain.py  test_genealogy_duplicates.py  test_genealogy_facts.py  test_genealogy_gender.py  test_genealogy_geo_allemagne.py  test_genealogy_geo_france.py  test_genealogy_geo_france_ex_communes.py  test_genealogy_geo_nominatim.py  test_genealogy_geo_registry.py  test_genealogy_geo_suisse.py  test_genealogy_geo_tool.py  test_genealogy_geo_transitions.py  test_genealogy_gramps_read_tools.py  test_genealogy_media_tools.py  test_genealogy_merge_models.py  test_genealogy_merge_plan.py  test_genealogy_merge_tiers.py  test_genealogy_militaires.py  test_genealogy_names.py  test_genealogy_note_tag_tools.py  test_genealogy_phonetics.py  (+36 more)
