[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-custom-tools"
version = "0.3.0"
description = "Centralized, resilient tools for CrewAI multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Core multi-agent runtime
    "crewai>=0.100.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.6",
    # Financial & quantitative libraries
    "yfinance>=0.2.38",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # OSINT & domain tools
    "pygithub>=2.2.0",
    "whodap>=0.1.16",
    "feedparser>=6.0.12",
    # Enterprise APIs
    "todoist-api-python>=2.1.3",
    "holehe>=1.0.0",
    "defusedxml>=0.7.1",
    "tldextract>=5.3.1",
    "vadersentiment>=3.3.2",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_custom_tools"]

[project.scripts]
crewai-custom-tools-mcp = "crewai_custom_tools.mcp_server:run"
