[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-custom-tools"
version = "0.11.0"
description = "Centralized, resilient tools for CrewAI multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Core multi-agent runtime
    "crewai>=1.15.1",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.6",
    # Financial & quantitative libraries
    "yfinance>=0.2.38",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # OSINT & domain tools
    "pygithub>=2.2.0",
    "whodap>=0.1.16",
    "feedparser>=6.0.12",
    # Enterprise APIs
    "todoist-api-python>=2.1.3",
    "holehe>=1.0.0",
    "defusedxml>=0.7.1",
    "tldextract>=5.3.1",
    "vadersentiment>=3.3.2",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_custom_tools"]
artifacts = ["src/crewai_custom_tools/tools/genealogy/data/*.csv"]

[tool.uv]
# crewai pins json-repair~=0.25.2, which is vulnerable to GHSA-xf7x-x43h-rpqh
# (unbounded CPU DoS via circular $ref, only reachable through the schema=
# kwarg). crewai only calls the plain repair_json(text) form, never schema=,
# so forcing the patched version is safe.
override-dependencies = ["json-repair>=0.60.1"]

[project.scripts]
crewai-custom-tools-mcp = "crewai_custom_tools.mcp_server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["scripts"]
