[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-custom-tools"
version = "0.28.0"
description = "Centralized, resilient tools for CrewAI multi-agent systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Core multi-agent runtime
    "crewai>=1.15.1",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.6",
    # Financial & quantitative libraries
    "yfinance>=0.2.38",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # OSINT & domain tools
    "pygithub>=2.2.0",
    "whodap>=0.1.16",
    "feedparser>=6.0.12",
    # Enterprise APIs
    "todoist-api-python>=2.1.3",
    "holehe>=1.0.0",
    "defusedxml>=0.7.1",
    "tldextract>=5.3.1",
    "vadersentiment>=3.3.2",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "ruff>=0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_custom_tools"]
artifacts = ["src/crewai_custom_tools/tools/genealogy/data/*.csv"]

[tool.uv]
# crewai pins json-repair~=0.25.2, which is vulnerable to GHSA-xf7x-x43h-rpqh
# (unbounded CPU DoS via circular $ref, only reachable through the schema=
# kwarg). crewai only calls the plain repair_json(text) form, never schema=,
# so forcing the patched version is safe.
override-dependencies = ["json-repair>=0.60.1"]

[project.scripts]
crewai-custom-tools-mcp = "crewai_custom_tools.mcp_server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["scripts"]

[tool.ruff]
# Mesuré sur le code réel : p99 = 103 caractères, 73 lignes seulement dépassent 120.
# Le défaut de ruff (88) en signalerait 861 — une norme qui ne correspond pas à ce projet.
line-length = 120

[tool.ruff.lint]
# Le jeu par défaut (E4, E7, E9, F) ne voit ni les imports désordonnés, ni la longueur
# des lignes, ni les pièges de fermeture sur variable de boucle, ni un `zip` qui tronque
# en silence. Ces deux derniers sont des risques de perte de données, pas du style.
select = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    # Projet francophone : l'apostrophe typographique (’) et l'espace insécable sont
    # voulues dans les libellés, les docstrings et les commentaires. Ces trois règles
    # traquent les homoglyphes cyrilliques et signaleraient toute la typographie française.
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# These __init__.py files are pure re-export aggregators: they only widen the
# namespace and reference none of the names themselves, which is exactly the
# case F403 cannot reason about. Enumerating the ~51 re-exported names by hand
# would risk silently dropping one from the public surface.
"src/crewai_custom_tools/models/__init__.py" = ["F403"]
"src/crewai_custom_tools/models/reports/__init__.py" = ["F403"]

# __all__ y est volontairement groupé par catégorie (Web, Finance, OSINT,
# Genealogy, Reporting, Enterprise, File, Analytics, Core) — chaque groupe
# reflète un sous-répertoire de tools/. Un tri alphabétique sur ~150 noms
# disperserait ces groupes et effacerait cette structure documentaire sans
# le moindre gain fonctionnel (l'ordre de __all__ n'affecte que `from x import *`).
"src/crewai_custom_tools/__init__.py" = ["RUF022"]

# Fichier généré depuis genecrew/docs/swagger/openapi.json (ADR 0004, en-tête
# « NE PAS ÉDITER ») : les lignes trop longues viennent des descriptions de
# schéma copiées telles quelles depuis l'OpenAPI. Les couper à la main serait
# perdu à la prochaine régénération, et modifier le générateur pour ça n'a
# aucune valeur — le contenu n'est jamais lu comme du code réécrit.
"src/crewai_custom_tools/tools/genealogy/models/gramps_generated.py" = ["E501"]
